export type Direction = "north" | "south" | "east" | "west" | "up" | "down";

export type PageType =
  | "ROOM"
  | "DIALOGUE"
  | "ENTITY"
  | "MENU"
...
